[gd_scene load_steps=6 format=3 uid="uid://bygi4jkyiaqah"]

[ext_resource type="Script" path="res://Scenes/UI/ui.gd" id="1_hh5f1"]
[ext_resource type="Texture2D" uid="uid://canonogofvcox" path="res://graphics/Platformer Art Deluxe/Base pack/HUD/hud_coins.png" id="2_notve"]
[ext_resource type="Texture2D" uid="uid://7vhxxeglh7e8" path="res://graphics/Platformer Art Deluxe/Base pack/HUD/hud_heartEmpty.png" id="3_fywl0"]
[ext_resource type="Script" path="res://Scenes/UI/Pause.gd" id="4_ai5vv"]

[sub_resource type="LabelSettings" id="LabelSettings_0nmcd"]
font_size = 34
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_hh5f1")

[node name="CoinCounter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Coin" type="HBoxContainer" parent="CoinCounter"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_bottom = 81.0
grow_horizontal = 0
alignment = 1

[node name="CoinLabel" type="Label" parent="CoinCounter/Coin"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_0nmcd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CoinCounter/Coin"]
layout_mode = 2
texture = ExtResource("2_notve")
expand_mode = 2
stretch_mode = 3

[node name="HeartControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4

[node name="HeartsContainer" type="HBoxContainer" parent="HeartControl"]
layout_mode = 1
offset_left = 15.0
offset_top = 15.0
offset_right = 182.0
offset_bottom = 60.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="HeartControl/HeartsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_fywl0")

[node name="TextureRect2" type="TextureRect" parent="HeartControl/HeartsContainer"]
layout_mode = 2
texture = ExtResource("3_fywl0")

[node name="TextureRect3" type="TextureRect" parent="HeartControl/HeartsContainer"]
layout_mode = 2
texture = ExtResource("3_fywl0")

[node name="Pause" type="Node" parent="."]
script = ExtResource("4_ai5vv")

[node name="PausePanel" type="Panel" parent="Pause"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Pause/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -171.0
offset_right = 166.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Game paused"

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/PausePanel"]
modulate = Color(8.18223e-06, 0.928316, 0.414766, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -68.0
offset_right = 192.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13

[node name="Resume" type="Button" parent="Pause/PausePanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="GoToMenu" type="Button" parent="Pause/PausePanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Go to main menu"

[connection signal="pressed" from="Pause/PausePanel/VBoxContainer/Resume" to="Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/PausePanel/VBoxContainer/GoToMenu" to="Pause" method="_on_go_to_menu_pressed"]
